Remove some whitespace in sidebar layout.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -1,28 +1,20 @@
 <aside id="sidebar">
   <nav>
     <ul>
-      <li>
-        <a href="/v1/">Overview</a>
-      </li>
+      <li><a href="/v1/">Overview</a></li>
       <li>
         <a href="/v1/miscellaneous/">Miscellaneous</a>
 
         <ul>
-          <li>
-            <a href="/v1/miscellaneous/rate_limit/">Rate Limit</a>
-          </li>
+          <li><a href="/v1/miscellaneous/rate_limit/">Rate Limit</a></li>
         </ul>
       </li>
       <li>
         <a href="/v1/users/">Users</a>
 
         <ul>
-          <li>
-            <a href="/v1/users/followers/">Followers</a>
-          </li>
-          <li>
-            <a href="/v1/users/teams/">Teams</a>
-          </li>
+          <li><a href="/v1/users/followers/">Followers</a></li>
+          <li><a href="/v1/users/teams/">Teams</a></li>
         </ul>
       </li>
     </ul>
