Make Teams to a top level resource.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -9,12 +9,12 @@
           <li><a href="/v1/miscellaneous/rate_limit/">Rate Limit</a></li>
         </ul>
       </li>
+      <li><a href="/v1/teams/">Teams</a></li>
       <li>
         <a href="/v1/users/">Users</a>
 
         <ul>
           <li><a href="/v1/users/followers/">Followers</a></li>
-          <li><a href="/v1/users/teams/">Teams</a></li>
         </ul>
       </li>
     </ul>
