Add user buckets documentation.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -2,6 +2,7 @@
   <nav>
     <ul>
       <li><a href="/v1/">Overview</a></li>
+      <li><a href="/v1/buckets/">Buckets</a></li>
       <li>
         <a href="/v1/miscellaneous/">Miscellaneous</a>
 
