--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -10,6 +10,7 @@
           <li><a href="/v1/miscellaneous/rate_limit/">Rate Limit</a></li>
         </ul>
       </li>
+      <li><a href="/v1/shots/">Shots</a></li>
       <li><a href="/v1/teams/">Teams</a></li>
       <li>
         <a href="/v1/users/">Users</a>
