Add bucket shots documentation.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -2,7 +2,13 @@
   <nav>
     <ul>
       <li><a href="/v1/">Overview</a></li>
-      <li><a href="/v1/buckets/">Buckets</a></li>
+      <li>
+        <a href="/v1/buckets/">Buckets</a>
+
+        <ul>
+          <li><a href="/v1/buckets/shots/">Shots</a></li>
+        </ul>
+      </li>
       <li>
         <a href="/v1/miscellaneous/">Miscellaneous</a>
 
