Add user shots documentation.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -23,6 +23,7 @@
 
         <ul>
           <li><a href="/v1/users/followers/">Followers</a></li>
+          <li><a href="/v1/users/shots/">Shots</a></li>
         </ul>
       </li>
     </ul>
