Move user buckets documentation under users.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -22,6 +22,7 @@
         <a href="/v1/users/">Users</a>
 
         <ul>
+          <li><a href="/v1/users/buckets/">Buckets</a></li>
           <li><a href="/v1/users/followers/">Followers</a></li>
           <li><a href="/v1/users/shots/">Shots</a></li>
         </ul>
