Add shot buckets documentation.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -16,7 +16,13 @@
           <li><a href="/v1/miscellaneous/rate_limit/">Rate Limit</a></li>
         </ul>
       </li>
-      <li><a href="/v1/shots/">Shots</a></li>
+      <li>
+        <a href="/v1/shots/">Shots</a>
+
+        <ul>
+          <li><a href="/v1/shots/buckets/">Buckets</a></li>
+        </ul>
+      </li>
       <li><a href="/v1/teams/">Teams</a></li>
       <li>
         <a href="/v1/users/">Users</a>
