--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -29,6 +29,7 @@
 
         <ul>
           <li><a href="/v1/users/buckets/">Buckets</a></li>
+          <li><a href="/v1/users/draftees/">Draftees</a></li>
           <li><a href="/v1/users/followers/">Followers</a></li>
           <li><a href="/v1/users/shots/">Shots</a></li>
         </ul>
