Add shot rebounds documentation.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -21,6 +21,7 @@
 
         <ul>
           <li><a href="/v1/shots/buckets/">Buckets</a></li>
+          <li><a href="/v1/shots/rebounds/">Rebounds</a></li>
         </ul>
       </li>
       <li><a href="/v1/teams/">Teams</a></li>
