--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -33,6 +33,7 @@
           <li><a href="/v1/users/buckets/">Buckets</a></li>
           <li><a href="/v1/users/draftees/">Draftees</a></li>
           <li><a href="/v1/users/followers/">Followers</a></li>
+          <li><a href="/v1/users/likes/">Likes</a></li>
           <li><a href="/v1/users/shots/">Shots</a></li>
         </ul>
       </li>
