Move users teams endpoint under users.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -25,7 +25,6 @@
           <li><a href="/v1/shots/rebounds/">Rebounds</a></li>
         </ul>
       </li>
-      <li><a href="/v1/teams/">Teams</a></li>
       <li>
         <a href="/v1/users/">Users</a>
 
@@ -35,6 +34,7 @@
           <li><a href="/v1/users/followers/">Followers</a></li>
           <li><a href="/v1/users/likes/">Likes</a></li>
           <li><a href="/v1/users/shots/">Shots</a></li>
+          <li><a href="/v1/users/teams/">Teams</a></li>
         </ul>
       </li>
     </ul>
