--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -6,12 +6,8 @@
 
     <nav>
       <ul>
-        <li><a href="/" class="active">Overview</a></li>
         <li><a href="/v1/">API</a></li>
-        <li><a href="http://help.dribbble.com">Support</a></li>
-        <li id="search">
-          <input type="text" placeholder="Search">
-        </li>
+        <li><a href="http://dribbble.com/contact?api">Support</a></li>
       </ul>
     </nav>
   </div>
