--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -278,6 +278,11 @@ pre {
     & + pre {
       border-radius: 0 0 6px 6px;
     }
+
+    &.no-response {
+      margin: 0 0 30px 0;
+      border-radius: 6px;
+    }
   }
 }
 
