--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -174,6 +174,12 @@ section {
       td {
         border: 1px solid #DDD;
         padding: 8px 16px;
+
+        .note {
+          color: #888;
+          font-size: 12px;
+          display: block;
+        }
       }
 
       code {
