--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -2,7 +2,10 @@
 
 <header>
   <div class="container">
-    <h1><a href="/"><span>Dribbble </span>Developer</a></h1>
+    <h1>
+      <a href="http://dribbble.com" id="logo">Dribbble</a>
+      <span id="logo-meta"><a href="/">Developer</a></span>
+    </h1>
 
     <nav>
       <ul>
@@ -15,9 +18,7 @@
 
 <section>
   <div class="container">
-    <article>
-      <%= yield %>
-    </article>
+    <%= yield %>
   </div>
 </section>
 
