--- a/layouts/footer.html.erb
+++ b/layouts/footer.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <p>Except where otherwise noted, content on this site is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/us/">Creative Commons CC-BY license</a>. Based on <a href="https://github.com/github/developer.github.com">developer.github.com</a>.</p>
 
-    <p>
-      <a href="https://github.com/dribbble">Dribbble on GitHub</a> &#8212;
-      <a href="http://twitter.com/dribbbleapi" class="twitter">Dribbble API on Twitter</a>
+    <p class="links">
+      <a href="https://github.com/dribbble"><img src="/images/icon-github.png" />Dribbble on GitHub</a>
+      <a href="http://twitter.com/dribbbleapi" class="twitter"><img src="/images/icon-twitter.png" />@dribbbleapi</a>
     </p>
   </div>
 </footer>
