Document liking and unliking shots.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -7,6 +7,7 @@
 
         <ul>
           <li><a href="/v1/shots/comments/">Comments</a></li>
+          <li><a href="/v1/shots/likes/">Likes</a></li>
           <li><a href="/v1/shots/rebounds/">Rebounds</a></li>
         </ul>
       </li>
