Document OAuth usage, details, and errors.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -1,7 +1,13 @@
 <aside id="sidebar">
   <nav>
     <ul>
-      <li><a href="/v1/">Overview</a></li>
+      <li>
+        <a href="/v1/">Overview</a>
+
+        <ul>
+          <li><a href="/v1/oauth/">OAuth</a></li>
+        </ul>
+      </li>
       <li>
         <a href="/v1/shots/">Shots</a>
 
