Content for front page.

--- a/layouts/footer.html.erb
+++ b/layouts/footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <p>Except where otherwise noted, content on this site is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/us/">Creative Commons CC-BY license</a>. Based on <a href="https://github.com/github/developer.github.com">developer.github.com</a>.</p>
+    <p>Except where otherwise noted, content on this site is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/us/">Creative Commons CC-BY license</a>.</p>
 
     <p class="links">
       <a href="https://github.com/dribbble"><img src="/images/icon-github.png" />Dribbble on GitHub</a>
