--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -129,13 +129,13 @@ section {
     float: left;
 
     h1 {
-      margin: 16px 0;
+      margin: 20px 0;
       font-size: 28px;
-      font-weight: 500;
+      font-weight: bold;
     }
 
     h2 {
-      margin: 12px 0;
+      margin: 20px 0 6px 0;
       font-size: 24px;
       font-weight: 500;
     }
@@ -147,7 +147,7 @@ section {
     }
 
     p {
-      margin: 16px 0;
+      margin: 0 0 20px 0;
       line-height: 1.5;
 
       code {
@@ -205,6 +205,7 @@ section {
 section aside {
   width: 256px;
   float: right;
+  margin-top: 20px;
 
   ul {
     background: #FFF;
@@ -238,19 +239,19 @@ section aside {
       position: relative;
 
       a {
-        color: #222;
+        color: #999;
         padding: 8px 8px 8px 24px;
         border-bottom: 1px solid #EEE;
         display: block;
 
         &:hover {
-          color: #4083A9;
+          color: #444;
           text-decoration: none;
         }
       }
 
       &.active > a {
-        color: #EA4C89;
+        color: #444;
       }
     }
 
@@ -287,8 +288,7 @@ pre {
   }
 
   &.headers {
-    background: #F0F0F0;
-    background-image: -webkit-linear-gradient(top, #F0F0F0, #E0E0E0);
+    background: #e7e7e7;
     color: #666;
     margin: 0;
     border-bottom: 0;
