Clean up markdown and urls.

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -3,7 +3,7 @@
 <header>
   <div class="container">
     <h1>
-      <a href="http://dribbble.com" id="logo">Dribbble</a>
+      <a href="https://dribbble.com/" id="logo">Dribbble</a>
       <span id="logo-meta"><a href="/">Developer</a></span>
     </h1>
 
