Add fork and dribbble references.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -30,4 +30,8 @@
       </li>
     </ul>
   </nav>
+
+  <div class="fork-me">
+    This website is a <a href="https://github.com/dribbble/api-documentation">public GitHub repository</a>. Please help us by forking the project and adding to it.
+  </div>
 </aside>
