--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -207,6 +207,10 @@ section aside {
   float: right;
   margin-top: 20px;
 
+  nav {
+    margin: 0 0 30px 0;
+  }
+
   ul {
     background: #FFF;
 
@@ -268,6 +272,16 @@ section aside {
     li.collapsed ul {
       display: none;
     }
+  }
+
+  .fork-me {
+    margin: 0 0 20px 0;
+    padding: 15px;
+    font-size: 13px;
+    line-height: 1.5;
+    color: #777;
+    background: rgba(0,0,0,0.05);
+    border-radius: 4px;
   }
 }
 
