--- a/layouts/footer.html.erb
+++ b/layouts/footer.html.erb
@@ -3,8 +3,9 @@
     <p>Except where otherwise noted, content on this site is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/us/">Creative Commons CC-BY license</a>.</p>
 
     <p class="links">
+      <a href="https://dribbble.com/dribbble"><img src="/images/icon-team-dribbble.png" />Dribbble on Dribbble</a>
       <a href="https://github.com/dribbble"><img src="/images/icon-github.png" />Dribbble on GitHub</a>
-      <a href="http://twitter.com/dribbbleapi" class="twitter"><img src="/images/icon-twitter.png" />@dribbbleapi</a>
+      <a href="https://twitter.com/dribbbleapi" class="twitter"><img src="/images/icon-twitter.png" />@dribbbleapi</a>
     </p>
   </div>
 </footer>
