Add terms to top menu and other UI changes.

--- a/layouts/api.html.erb
+++ b/layouts/api.html.erb
@@ -10,6 +10,7 @@
     <nav>
       <ul>
         <li><a href="/v1/" class="active">API</a></li>
+        <li><a href="/terms/">Terms &amp; Guidelines</a></li>
         <li><a href="http://dribbble.com/contact?api">Support</a></li>
       </ul>
     </nav>
