Document attachment deletion endpoint.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -12,6 +12,7 @@
         <a href="/v1/shots/">Shots</a>
 
         <ul>
+          <li><a href="/v1/shots/attachments/">Attachments</a></li>
           <li><a href="/v1/shots/comments/">Comments</a></li>
           <li><a href="/v1/shots/likes/">Likes</a></li>
           <li><a href="/v1/shots/rebounds/">Rebounds</a></li>
