--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -23,6 +23,7 @@
         <a href="/v1/users/">Users</a>
 
         <ul>
+          <li><a href="/v1/users/buckets/">Buckets</a></li>
           <li><a href="/v1/users/followers/">Followers</a></li>
           <li><a href="/v1/users/likes/">Likes</a></li>
           <li><a href="/v1/users/shots/">Shots</a></li>
