Remove layout duplication.

--- a/layouts/api.html.erb
+++ b/layouts/api.html.erb
@@ -1,21 +1,4 @@
-<%= render "head" %>
-
-<header>
-  <div class="container">
-    <h1>
-      <a href="http://dribbble.com" id="logo">Dribbble</a>
-      <span id="logo-meta"><a href="/">Developer</a></span>
-    </h1>
-
-    <nav>
-      <ul>
-        <li><a href="/v1/" class="active">API</a></li>
-        <li><a href="/terms/">Terms &amp; Guidelines</a></li>
-        <li><a href="http://dribbble.com/contact?api">Support</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+<%= render "head", active: "api" %>
 
 <section>
   <div class="container">
