--- a/layouts/head.html.erb
+++ b/layouts/head.html.erb
@@ -9,6 +9,7 @@
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="alternate" type="application/atom+xml" title="API Changes" href="/changes.atom">
 </head>
 <body>
 
@@ -22,6 +23,7 @@
     <nav>
       <ul>
         <li><a href="/v1/"<%= %{ class="active"} if @active == "api" %>>API</a></li>
+        <li><a href="/changes/"<%= %{ class="active"} if @active == "changes" %>>Changes</a></li>
         <li><a href="/terms/"<%= %{ class="active"} if @active == "terms" %>>Terms &amp; Guidelines</a></li>
         <li><a href="http://dribbble.com/contact?api">Support</a></li>
       </ul>
