--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -5,6 +5,7 @@
         <a href="/v1/">Overview</a>
 
         <ul>
+          <li><a href="/v1/media/">Media Types</a></li>
           <li><a href="/v1/oauth/">OAuth</a></li>
         </ul>
       </li>
