Document bucket endpoint.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -9,6 +9,7 @@
           <li><a href="/v1/oauth/">OAuth</a></li>
         </ul>
       </li>
+      <li><a href="/v1/buckets/">Buckets</a></li>
       <li>
         <a href="/v1/shots/">Shots</a>
 
