--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -9,7 +9,13 @@
           <li><a href="/v1/oauth/">OAuth</a></li>
         </ul>
       </li>
-      <li><a href="/v1/buckets/">Buckets</a></li>
+      <li>
+        <a href="/v1/buckets/">Buckets</a>
+
+        <ul>
+          <li><a href="/v1/buckets/shots/">Shots</a></li>
+        </ul>
+      </li>
       <li>
         <a href="/v1/shots/">Shots</a>
 
