--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -146,6 +146,11 @@ section {
       font-weight: 500;
     }
 
+    h4 {
+      margin: 0 0 6px 0;
+      font-size: 14px;
+    }
+
     p {
       margin: 0 0 20px 0;
       line-height: 1.5;
