Document shot buckets endpoint.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -21,6 +21,7 @@
 
         <ul>
           <li><a href="/v1/shots/attachments/">Attachments</a></li>
+          <li><a href="/v1/shots/buckets/">Buckets</a></li>
           <li><a href="/v1/shots/comments/">Comments</a></li>
           <li><a href="/v1/shots/likes/">Likes</a></li>
           <li><a href="/v1/shots/rebounds/">Rebounds</a></li>
