Remove redundancy in titles.

--- a/layouts/api.html.erb
+++ b/layouts/api.html.erb
@@ -1,4 +1,4 @@
-<%= render "head", active: "api" %>
+<%= render "head", active: "api", title_suffix: " | Dribbble API" %>
 
 <section>
   <div class="container">
