--- a/layouts/head.html.erb
+++ b/layouts/head.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title><%= @item[:title] %></title>
+  <title><%= @item[:title] %><%= @title_suffix %></title>
 
   <link href="/css/application.css" rel="stylesheet" type="text/css">
 
