--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -167,6 +167,11 @@ section {
         padding: 0px 3px;
         display: inline-block;
       }
+
+      &.opening {
+        font-size: 18px;
+        line-height: 1.5;
+      }
     }
 
     ul {
@@ -480,5 +485,35 @@ div.splash {
   img.mark {
     float: right;
     margin: 0 40px 0 0;
+  }
+}
+
+div.announce {
+  margin: 35px 0 20px 0;
+  padding: 20px 40px;
+  text-align: center;
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.07);
+
+  h2 {
+    margin: 0 0 5px 0;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1;
+    color: #ea4c89;
+  }
+
+  p {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.5;
+    opacity: .8;
+
+    a {
+      color: #444;
+      text-decoration: underline;
+      font-weight: 500;
+    }
   }
 }
