--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -17,6 +17,9 @@
         </ul>
       </li>
       <li>
+        <a href="/v1/projects/">Projects</a>
+      </li>
+      <li>
         <a href="/v1/shots/">Shots</a>
 
         <ul>
