Document user projects endpoints.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -37,6 +37,7 @@
           <li><a href="/v1/users/buckets/">Buckets</a></li>
           <li><a href="/v1/users/followers/">Followers</a></li>
           <li><a href="/v1/users/likes/">Likes</a></li>
+          <li><a href="/v1/users/projects/">Projects</a></li>
           <li><a href="/v1/users/shots/">Shots</a></li>
           <li><a href="/v1/users/teams/">Teams</a></li>
         </ul>
