Document project shots endpoint.

--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -18,6 +18,10 @@
       </li>
       <li>
         <a href="/v1/projects/">Projects</a>
+
+        <ul>
+          <li><a href="/v1/projects/shots/">Shots</a></li>
+        </ul>
       </li>
       <li>
         <a href="/v1/shots/">Shots</a>
