--- a/layouts/sidebar.html.erb
+++ b/layouts/sidebar.html.erb
@@ -31,6 +31,7 @@
           <li><a href="/v1/shots/buckets/">Buckets</a></li>
           <li><a href="/v1/shots/comments/">Comments</a></li>
           <li><a href="/v1/shots/likes/">Likes</a></li>
+          <li><a href="/v1/shots/projects/">Projects</a></li>
           <li><a href="/v1/shots/rebounds/">Rebounds</a></li>
         </ul>
       </li>
